# SportsSight

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
configs/: default.yaml
configs/rosters/: nba_finals_2025.json
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: AlertFeed.tsx  FatigueTimeline.tsx  PlayerCard.tsx  VideoPlayer.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/services/: api.ts
dashboard/src/types/: index.ts
scripts/: download_data.py  load_game.py
src/: __init__.py  cli.py  config.py
src/api/: __init__.py  app.py  auth.py  database.py
src/features/: __init__.py  extractor.py
src/ingestion/: __init__.py  pipeline.py  sources.py
src/models/: __init__.py  fatigue.py
src/realtime/: __init__.py  alerts.py  engine.py
src/vision/: __init__.py  annotator.py  court.py  detector.py  jersey.py  pipeline.py  pose.py  reid.py  team_classifier.py  track_merger.py  tracker.py
tests/integration/: test_pipeline.py
tests/unit/: test_alerts.py  test_api_schemas.py  test_court.py  test_court_detection.py  test_database.py  test_fatigue.py  test_features.py  test_ingestion.py  test_reid.py  test_tracker.py  test_vision_pipeline.py
