[project]
name = "sportssight"
version = "0.1.0"
description = "Real-time sports video analytics — fatigue detection, play prediction, and biomechanical analysis"
requires-python = ">=3.11,<3.14"
dependencies = [
    # === Vision Pipeline ===
    "ultralytics>=8.2.0",          # YOLOv8 detection
    "torch>=2.3.0",                # PyTorch (MPS + CUDA)
    "torchvision>=0.18.0",
    "opencv-python>=4.9.0",        # Video I/O, homography, image processing
    "lap>=0.4.0",                  # Linear assignment for ByteTrack

    # === Data & ML ===
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",

    # === Real-time Infrastructure ===
    "redis>=5.0.0",                # Redis Streams for pipeline messaging
    "fastapi>=0.111.0",            # REST + WebSocket API
    "uvicorn[standard]>=0.29.0",   # ASGI server
    "websockets>=12.0",            # WebSocket support
    "pydantic>=2.7.0",             # Data validation

    # === Database ===
    "sqlalchemy>=2.0.30",          # ORM
    "asyncpg>=0.29.0",             # Async PostgreSQL driver
    "alembic>=1.13.0",             # Database migrations
    "psycopg2-binary>=2.9.9",      # Sync PostgreSQL driver

    # === Streaming / Camera ===
    "av>=12.0.0",                  # PyAV — FFmpeg bindings for RTSP/RTMP/HLS
    "streamlink>=6.7.0",           # Broadcast stream extraction

    # === Utilities ===
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",                # CLI output
    "click>=8.1.7",                # CLI framework
    "httpx>=0.27.0",               # Async HTTP client
    "pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
pose = [
    # MMPose stack — install separately as it has complex deps
    "mmpose>=1.3.0",
    "mmdet>=3.3.0",
    "mmengine>=0.10.0",
]
reid = [
    # torchreid — install from GitHub for latest version:
    # pip install git+https://github.com/KaiyangZhou/deep-person-reid.git
    "torchreid>=0.2.5",
]
gpu-optimize = [
    "tensorrt>=10.0.0",            # NVIDIA TensorRT for production inference
    "onnxruntime-gpu>=1.18.0",     # ONNX Runtime GPU
]
all = [
    "sportssight[pose,reid,gpu-optimize]",
]

[project.scripts]
sportssight = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
